Added parsing of quotations

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -6,10 +6,10 @@ command.help.description=Shows an overview of all commands.
 command.help.embed.description=All commands and their descriptions are listed here.
 command.help.embed.title=Help Dialog
 command.help.single.embed.title=Help dialog for `{0}`
-command.help.single.usage_field=Usage: `%s %s`
 command.help.usage=[command]
 command.not_exist=Command `{0}` does not exist.
 command.strawpoll.description=Make a [strawpoll](https://strawpoll.me) using the given title and options.
+command.strawpoll.two_options_required=Strawpoll command requires at least 2 options.
 command.strawpoll.usage=<title> [options, min. 2]
 command.urban.description=Searches the [urban dictionary](https://urbandictionary.com/)
 command.urban.embed.footer_text=Example: {0}
