Add github api request for basic info

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -18,6 +18,10 @@ command.urban.fetch_exception=Error occured while fetching urban definition
 command.urban.no_results=Search term `{0}` did not yield any results.
 command.urban.term_required=A word / search term is required.
 command.urban.usage=<word / search term>
+
+# Handlers
+handler.gitrepo.github_fetch_exception=Error occured while fetching GitHub repo
+handler.gitrepo.gitlab_fetch_exception=Error occured while fetching GitLab repo
 # Error messages
 unsupported.charset=Unsupported encoding charset found
 # URL's that are used in the application
